# everything-civi

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  smithery.yaml
src/everything_civi/: __main__.py  admin_tools.py  client.py  config.py  crud_tools.py  discovery_tools.py  logging_config.py  prompts.py  resources.py  searchkit_tools.py  server.py  utility_tools.py  workflow_tools.py
tests/: conftest.py  test_admin_tools.py  test_audit_logging.py  test_client.py  test_integration.py  test_integration_searchkit.py  test_integration_workflows.py  test_permissions.py  test_searchkit_tools.py  test_utility_tools.py  test_workflow_tools.py
