[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything-civi"
version = "0.1.0"
description = "MCP server for complete CiviCRM operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
everything-civi = "everything_civi.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/everything_civi"]
