[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything-civi"
version = "0.1.0"
description = "MCP server for complete CiviCRM operations — manage contacts, contributions, memberships, events, cases, and all 150+ entities through AI assistants"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "CallHub", email = "engineering2@callhub.io"},
]
keywords = ["mcp", "civicrm", "crm", "nonprofit", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ananda-callhub/everything-civi"
Repository = "https://github.com/ananda-callhub/everything-civi"
Issues = "https://github.com/ananda-callhub/everything-civi/issues"

[project.scripts]
everything-civi = "everything_civi.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/everything_civi"]
